# YukaLink

./: .gitmodules
firmware/: CMakeLists.txt  FreeRTOS_Kernel_import.cmake  git_version.h.in
firmware/include/bmp/: FreeRTOSConfig.h  version.h
firmware/source/SysView/: SEGGER_RTT_Conf.h  SEGGER_SYSVIEW.c  SEGGER_SYSVIEW_Conf.h  SEGGER_SYSVIEW_ConfDefaults.h  SEGGER_SYSVIEW_Config_FreeRTOS.c  SEGGER_SYSVIEW_FreeRTOS.h
firmware/source/bmp/: platform.c  platform_boards.c
hardware/prototype/: HR911105A.kicad_sym  Input_interfaces.kicad_sch  Input_interfaces.kicad_sch-bak  Input_interfaces.kicad_sch_old  MCU.kicad_sch  MCU.kicad_sch-bak  MCU.kicad_sch_old  Power.kicad_sch  Power.kicad_sch-bak  Power.kicad_sch_old  Target1.kicad_sch  Target1.kicad_sch_old  Target2_Iso.kicad_sch  Target2_Iso.kicad_sch_old  YukaLink_revA.camset  YukaLink_revA.csv  YukaLink_revA.d356  YukaLink_revA.kicad_dru  YukaLink_revA.kicad_prl  YukaLink_revA.kicad_pro  YukaLink_revA.kicad_sch  YukaLink_revA.kicad_sch_old  YukaLink_revA.xls  YukaLink_revA.xml  fp-info-cache  fp-lib-table  ibom.config.ini  sym-lib-table
hardware/prototype/bom/: ibom.html
hardware/prototype/jlcpcb/: project.db
hardware/prototype/jlcpcb/production_files/: BOM-YukaLink_revA.csv  CPL-YukaLink_revA.csv
